# cv_urfu_course

./: README.md  pyproject.toml
color-finder/: main.py
game003/: main.py
