[tool.poetry]
name = "computer_vision"
version = "0.1.0"
description = ""
authors = ["Alexey Smelik <aleshabrave@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0"
mediapipe = "^0.8.11"

[tool.poetry.dev-dependencies]
black = "22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
